--- a/src/Pages/Login/Register/Register.css
+++ b/src/Pages/Login/Register/Register.css
@@ -1,3 +1,20 @@
 .title-lr {
     color: rgb(59, 245, 183);
 }
+
+.register-form {
+    margin: 0 auto;
+    width: 50%;
+}
+
+.register-form input:not([type=checkbox]) {
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-bottom: 15px;
+    border: 1px solid rgb(53, 165, 209);
+    border-radius: 5px;
+
+}
